chore: swap package