@@ -16,7 +16,8 @@
     <properties>
         <java.version>25</java.version>
         <jda.version>6.4.1</jda.version>
-        <jdave.version>0.1.8</jdave.version>
+        <libdave.version>0.1.2</libdave.version>
+        <libdave.natives.version>0.1.3</libdave.natives.version>
     </properties>
     <dependencies>
         <dependency>
@@ -53,26 +54,31 @@
         </dependency>
 
         <dependency>
-            <groupId>club.minnced</groupId>
-            <artifactId>jdave-api</artifactId>
-            <version>${jdave.version}</version>
+            <groupId>moe.kyokobot.libdave</groupId>
+            <artifactId>adapter-jda</artifactId>
+            <version>${libdave.version}</version>
         </dependency>
         <dependency>
-            <groupId>club.minnced</groupId>
-            <artifactId>jdave-native-win-x86-64</artifactId>
-            <version>${jdave.version}</version>
+            <groupId>moe.kyokobot.libdave</groupId>
+            <artifactId>impl-jni</artifactId>
+            <version>${libdave.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>moe.kyokobot.libdave</groupId>
+            <artifactId>natives-win-x86-64</artifactId>
+            <version>${libdave.natives.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>club.minnced</groupId>
-            <artifactId>jdave-native-linux-x86-64</artifactId>
-            <version>${jdave.version}</version>
+            <groupId>moe.kyokobot.libdave</groupId>
+            <artifactId>natives-linux-x86-64</artifactId>
+            <version>${libdave.natives.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>club.minnced</groupId>
-            <artifactId>jdave-native-linux-aarch64</artifactId>
-            <version>${jdave.version}</version>
+            <groupId>moe.kyokobot.libdave</groupId>
+            <artifactId>natives-linux-aarch64</artifactId>
+            <version>${libdave.natives.version}</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -113,9 +119,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <jvmArguments>--enable-native-access=ALL-UNNAMED</jvmArguments>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
